fix: maxelement count, border on mobile view, popup icon seperated

--- a/editor-components/e-commerce/e-commerce1/e-commerce1.module.scss
+++ b/editor-components/e-commerce/e-commerce1/e-commerce1.module.scss
@@ -444,6 +444,9 @@
 
                             .count-input {
                                 border-right: 1px solid var(--composer-tertiary-color);
+                                &.with-button{
+                                    border-right: 1px solid var(--composer-tertiary-color);
+                                }
                             }
                         }
                     }
